--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,9 @@
           "128": "icon128.png" },
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon128.png",
     "default_popup": "popup.html",
-    "default_title": "Click here!"
+    "default_title": "Clean up your facebook!"
   },
   "permissions": [
     "activeTab"
